--- a/app/application.json
+++ b/app/application.json
@@ -1,1 +1,1 @@
-{"dataBase":{"driver":"","name":"","password":"","user":""},"url":"neon","charset":"utf-8"}
+{"database":{"charset":"","driver":"","host":"","name":"","password":"","port":"","user":""},"url":"neon","charset":"utf-8"}
